@@ -6,7 +6,7 @@ AC_PREFIX_DEFAULT(/usr/local/nagios)
 PKG_NAME=nsca
 PKG_VERSION="2.2"
 PKG_HOME_URL="http://www.nagios.org/"
-PKG_REL_DATE="07-15-2002"
+PKG_REL_DATE="10-09-2002"
 
 dnl Figure out how to invoke "install" and what install options to use.
 
